Update CleanToolbar button visibility

This CL updates the visibility of the button of the clean toolbar to
take into account the specific of iPhone + in landscape.

Bug: 805289
Cq-Include-Trybots: master.tryserver.chromium.mac:ios-simulator-cronet;master.tryserver.chromium.mac:ios-simulator-full-configs
Change-Id: Ib248a7c396a8aed325dbac3fc153f1220819b2bb
Reviewed-on: https://chromium-review.googlesource.com/882327
Commit-Queue: Gauthier Ambard <gambard@chromium.org>
Reviewed-by: Louis Romero <lpromero@chromium.org>
Cr-Commit-Position: refs/heads/master@{#531499}
Former-commit-id: f11507a8e16c4c684b0e4aa5dfbd315054e520ba