ios/chrome/browser/ui/toolbar/clean/toolbar_button.mm
@@ -92,9 +92,8 @@
       self.visibilityMask & ToolbarComponentVisibilityIPhoneOnly) {
     newHiddenValue = NO;
   }
-  if (isCompactWidth &&
-      (self.visibilityMask &
-       ToolbarComponentVisibilityCompactWidthOnlyWhenEnabled)) {
+  if (newHiddenValue &&
+      self.visibilityMask & ToolbarComponentVisibilityOnlyWhenEnabled) {
     newHiddenValue = !self.enabled;
   }
 
